-correction version mobile

--- a/style.css
+++ b/style.css
@@ -136,11 +136,6 @@ border-radius: 8px 8px 8px 8px;
     margin-bottom: 20px;
     margin-left: 15px;}
 
-.filtres_nom
-{
-color:black;
-font-size: ;
-}
 
 .filtres_item /*Elements communs à tous les filtres 
 probleme d'alignement*/
@@ -290,7 +285,6 @@ display: flex;
 justify-content: center;
 align-items: flex-start;
 flex-direction: column;
-padding: 0px 15px 10px 15px;
 margin: 5px 5px 15px 15px;
 
 }
@@ -300,10 +294,13 @@ overflow: hidden;
 object-fit: cover;
 width: 100%;
 height: 8em;
+border-radius: 8px 8px 0 0;
 }
 
-
-
+.marseille .photos_marseille .cardlarge .container
+{
+padding: 0 0 15px 10px;
+}
 
 .activites_group
 {
@@ -382,9 +379,11 @@ width: 100%;
  @media screen and (min-width: 766px){
 
 body { margin: 20px;}
-    nav { display: flex;}
-     .menu{ display: flex;flex-direction: row-reverse;justify-content: space-between;}
-      .liens1 { display: flex; flex-wrap: wrap;}
+    nav { display: flex; justify-content: space-between;}
+     .menu{ display: flex; flex-direction: row; width: 100%; border-bottom;}
+      .liens1 { display: flex; flex-wrap: wrap; width: 50%; order: 1;}
+      .liens2 {display: flex; flex-wrap: wrap; width: 50%;}
+      .inscrire {display: flex; width: 25%; order: 2;}
 
 
 .bouton1{display: none;}
